style.css
@font-face {
  font-family: goose;
  src: url(fonts/Cocogoose_trial.otf);
}

* {
  overflow: hidden;
}

html {
  overflow: scroll;
  width: 100%;
}

body {
  padding: 0;
  margin: 0;
  font-family: "Lato", sans-serif;
}

header {
  height: 48px;
  width: 100%;
  display: flex;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.911);
}

.black-nav {
  display: none;
}

.toggle-menu {
  position: absolute;
  display: none;
  width: 100%;
  height: 112vh;
  top: 0;
  background: #fff;
  color: #333;
  z-index: 10;
  box-shadow: 0 48px 48px rgba(37, 47, 137, 0.08);
}

.menu {
  display: flex;
  justify-content: center;
  align-items: center;
  list-style: none;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.active-border {
  padding: 5px 12px;
  border: 5px solid #ec5242;
}

.menu-link {
  text-decoration: none;
  color: #272a31;
}

.menu-link:hover {
  color: #ec5242;
}

.menu-list {
  margin: 20px 0;
}

.hambug-items {
  z-index: 12;
  position: relative;
  width: 100%;
  height: 100%;
  top: 100px;
}

#togclose {
  position: absolute;
  right: 50px;
  top: 50px;
  cursor: pointer;
}

.hambuger {
  border-radius: 10px;
  width: 18px;
  margin-top: 10px;
  margin-right: 30px;
  margin-bottom: 0;
  cursor: pointer;
}

.speakers {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-gap: 15px;
}

.card {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.card img {
  width: 100%;
  margin-right: 30px;
  flex-shrink: 0;
}

.about-speakers {
  margin: 10px 20px;
  width: 60%;
}

.about-speakers h3 {
  margin-bottom: 10px;
}

.about-speakers h4 {
  margin-bottom: 10px;
  color: #ec5242;
}

.about-speakers p {
  font-size: 16px;
}

.first-section {
  height: 105vh;
  background-image: url(images/background.jpg);
  background-size: cover;
}

.first-content {
  display: flex;
  justify-content: center;
  text-align: left;
  flex-direction: column;
  height: 50vh;
}

.transparent {
  height: 105vh;
  background-color: #fff;
  opacity: 80%;
}

.text {
  -webkit-background-clip: text;
  background-image: linear-gradient(90deg, #fd1900, #f06657, #333);
  color: transparent;
  font-weight: bold;
  font-size: 31px;
  font-family: goose;
  margin: 0 15px;
}

.text-hello {
  color: #ec5242;
  font-weight: bold;
  font-size: 31px;
  font-family: "Lato", sans-serif;
  margin: 0 15px;
}

.text2 {
  font-weight: bold;
  font-size: 18px;
  text-align: center;
}

.text3 {
  color: #272a31;
  font-weight: bold;
  font-size: 25px;
  margin-left: 17px;
  font-family: goose;
}

.describe {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 25vh;
}

.describe2 {
  margin-top: 5px;
  display: flex;
  align-items: center;
  height: 25vh;
  justify-content: center;
}

.second-section {
  height: auto;
  background-color: #272a31;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.text4 {
  color: #fff;
}

.line {
  position: relative;
  left: 40px;
  border-top: #ec5242 2px solid;
  width: 60px;
}

.flexbox {
  margin-top: 15px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  width: 90%;
}

.item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  width: 300px;
  height: 15vh;
  background-color: #3d4047;
  margin: 8px;
}

.item-img {
  width: 35px;
  margin-left: 24px;
}

.item-title {
  color: #ec5242;
  font-size: 20px;
  font-weight: bold;
  margin-left: 8px;
}

.item-text {
  text-align: center;
  font-size: 15px;
  font-weight: bold;
  margin: 5px;
}

.menu-bar {
  position: relative;
  left: 25px;
}

.light {
  color: #fff;
}

.textabout {
  color: #ec5242;
  font-weight: bold;
  font-size: 23px;
  font-family: goose;
  text-align: center;
}

.two {
  height: 50vh;
  background-image: url(images/background.jpg);
  background-size: cover;
}

.transparent2 {
  height: 50vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background-color: rgba(255, 255, 255, 0.75);
}

.btn {
  padding: 24px 35px;
  text-decoration: none;
  color: #fff;
  background-color: #ec5242;
  margin: 12px 0;
}

.third-section {
  height: auto;
  background-color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.line2 {
  position: relative;
  border-top: #ec5242 2px solid;
  width: 60px;
}

.btn2 {
  padding: 15px 150px;
  text-decoration: none;
  color: #272a31;
  border: 1px solid #d3d3d3;
  background-color: #fff;
  margin: 12px 0;
}

.fas1 {
  color: #ec5242;
}

.fourth-section {
  background-image: url(images/bg2.jpg);
  background-size: cover;
  height: 50vh;
  background-color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.fourth-content {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 359px;
  height: 231px;
  background-color: #fff;
}

a {
  color: #272a31;
  font-weight: bold;
}

.fourth-text {
  font-size: 18px;
  text-align: center;
  font-weight: bold;
  color: #272a31;
}

.fifth-section {
  height: 60vh;
  background-color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  border-bottom: 1px solid #d3d3d3;
}

.text5 {
  font-weight: bold;
  font-size: 22px;
}

.logo5 {
  width: 254px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.sixth-section {
  height: 120vh;
  background-color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.pictures {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.picture {
  background-image: url(images/figure1.jpg);
  background-size: cover;
  width: 400px;
  height: 270px;
  margin: 12px;
}

.picture2 {
  background-image: url(images/figure2.jpg);
  background-size: cover;
  width: 400px;
  height: 270px;
  margin: 12px;
}

.trans2 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  width: 400px;
  height: 270px;
  background-color: rgba(236, 82, 66, 0.75);
}

.text6-1 {
  color: #fff;
  font-weight: bold;
  font-size: 25px;
  margin: 8px;
}

.text6 {
  color: #fff;
  font-weight: bold;
  font-size: 17px;
  margin: 8px;
}

.partner {
  height: 50vh;
  background-color: #272a31;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.partner-flex {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 375px;
  flex-wrap: wrap;
  margin-top: 25px;
}

.partner-icon {
  width: 100px;
  margin: 8px;
}

.footer-content {
  height: 20vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  border-top: 1px solid #333;
}

.footer-content-about {
  height: 20vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  background-color: #272a31;
  border-top: 1px solid #333;
}

.footer-text-about {
  color: #fff;
  font-size: 15px;
  margin-left: 10px;
}

.footer-text {
  font-size: 15px;
  margin-left: 10px;
}

.logo6 {
  width: 170px;
  margin-left: 27px;
}

.Logo {
  display: none;
}

.navbar {
  display: none;
}

@media screen and (min-width: 768px) {
  .menu-bar {
    display: none;
  }

  header {
    display: none;
  }

  .navbar {
    width: 100%;
    height: 48px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #fff;
    color: #272a31;
    position: relative;
    right: 40px;
  }

  .navbar-links ul {
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
  }

  .navbar-links li {
    list-style: none;
  }

  .navbar-links li a {
    text-decoration: none;
    color: #272a31;
    display: block;
    margin: 0 10px;
  }

  .navbar-links li a:hover {
    color: #ec5242;
    display: block;
  }

  .active-border {
    padding: 5px 12px;
    border: 5px solid #ec5242;
  }

  .Logo {
    display: block;
    width: 100px;
    margin-left: 100px;
  }

  .first-section {
    height: 90vh;
    background-image: url(images/background.jpg);
    background-size: cover;
  }

  .transparent {
    height: 90vh;
    display: flex;
    justify-content: center;
    flex-direction: column;
    background-color: #fff;
    opacity: 80%;
  }

  .text {
    background-image: linear-gradient(180deg, #fd1900, #f06657, #333);
    font-size: 35px;
    margin-left: 50px;
  }

  .text-hello {
    font-size: 35px;
    margin-left: 50px;
  }

  .text2 {
    font-weight: bold;
    font-size: 22px;
    text-align: center;
  }

  .text3 {
    color: #272a31;
    font-weight: bold;
    margin-left: 48px;
    font-size: 25px;
    font-family: goose;
  }

  .describe {
    height: auto;
    margin-left: 50px;
    width: 550px;
  }

  .describe2 {
    height: auto;
    margin-left: 14px;
    width: 550px;
  }

  .flexbox {
    flex-direction: row;
    height: 50vh;
  }

  .item {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 150px;
    width: 225px;
  }

  .item:hover {
    border: 2px solid #fff;
  }

  .margin0 {
    margin: 0;
  }

  .tex-desk {
    width: 180px;
    text-align: center;
    margin-top: 8px;
  }

  .text5 {
    font-size: 25px;
  }

  .btn {
    display: none;
  }

  .program {
    position: relative;
    margin-bottom: 25px;
    color: #fff;
  }

  .fourth-content {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 750px;
    height: 231px;
    background-color: #fff;
  }

  .pictures {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
  }

  .footer-text {
    font-size: 15px;
    margin-left: 200px;
  }

  .black-nav {
    display: block;
    background-color: #3e3e3e;
    width: 100%;
    height: 35px;
  }

  .black-nav-content {
    position: relative;
    right: 50px;
    top: 5px;
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }

  .blck-nav-img {
    width: 24px;
    margin: 0 5px;
  }

  .blck-nav-text {
    color: #fff;
    margin: 0 5px;
  }

  .speakers {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 15px;
  }
}

